--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@ In questo modo, il documento mira a colmare una lacuna frequente nelle aziende: 
   </p>
 <div 
 	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true"
- width="640" height="1082" frameborder="0" marginheight="0" marginwidth="0">
+ width="100%" height="900" styke ="max-width: 700px; margin: 0 auto; dysplay: block; border: none;" frameborder = "0" marginheight = "0" marginwidth = "0">
 Caricamento…
-</iframe>
+    </iframe>
 </div>
 </section>
   <form id="feedbackForm" onsubmit="generaFileFeedback(event)" style="max-width: 600px; margin: 0 auto;">
