--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@ In questo modo, il documento mira a colmare una lacuna frequente nelle aziende: 
     Ti invitiamo a condividere la tua opinione su questa guida. Il tuo feedback è fondamentale per valutare l'efficacia del documento esplicativo e dell'interfaccia web, 
     raccogliendo suggerimenti utili per identificare eventuali aree di miglioramento. 
     Compila il modulo qui sotto per aiutarci a offrire contenuti sempre più utili e aggiornati.
+	  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true">Clicca qui per compilare il modulo feedback</a>
   </p>
 <div 
-	<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true" test-align: center; target="_blank" width="100%" height="900" styke ="max-width: 700px; margin: 0 auto; dysplay: block; border: none;" frameborder = "0" marginheight = "0" marginwidth = "0">Clicca qui per compilare il modulo feedback</a></p>
+	<p>  target="_blank" width="100%" height="900" styke ="max-width: 700px; margin: 0 auto; dysplay: block; border: none;" frameborder = "0" marginheight = "0" marginwidth = "0"</p>
 </div>
 
 
