--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ In questo modo, il documento mira a colmare una lacuna frequente nelle aziende: 
     Ti invitiamo a condividere la tua opinione su questa guida. Il tuo feedback è fondamentale per valutare l'efficacia del documento esplicativo e dell'interfaccia web, 
     raccogliendo suggerimenti utili per identificare eventuali aree di miglioramento. 
     Compila il modulo qui sotto per aiutarci a offrire contenuti sempre più utili e aggiornati.
-	  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true">Clicca qui per compilare il modulo feedback</a>
+	  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true" target="_blank" rel="noopener noreferrer">Clicca qui per compilare il modulo feedback</a>
   </p>
 
 
