--- a/index.html
+++ b/index.html
@@ -191,12 +191,13 @@ In questo modo, il documento mira a colmare una lacuna frequente nelle aziende: 
 <section id="feedback" style="padding: 40px; background-color: #f2f6f9; font-family: 'Times New Roman', serif;">
   <h2 style="text-align: center; font-size: 28px; color: #333;">Valutazione e Raccolta Feedback</h2>
   <p style="text-align: justify; max-width: 800px; margin: 0 auto 30px auto;">
-    Ti invitiamo a condividere la tua opinione su questa guida. Il tuo feedback è fondamentale per valutare l'efficacia del documento esplicativo e dell'interfaccia web, 
-    raccogliendo suggerimenti utili per identificare eventuali aree di miglioramento. 
-    Compila il modulo qui sotto per aiutarci a offrire contenuti sempre più utili e aggiornati.
-	  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true" target="_blank" rel="noopener noreferrer">Clicca qui per compilare il modulo feedback</a>
+    Ti invitiamo a condividere la tua opinione su questa guida. Il tuo feedback è fondamentale al fine 
+    di raccogliere suggerimenti utili per identificare eventuali aree di miglioramento. 
+    Compila il modulo qui sotto per aiutarci a offrire contenuti sempre più utili e aggiornati.  
+    <div style="text-align: center">                                           
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkz1PNaukITif3-FNjT4iCeLLjDWrJmayl5EfJqQD-oVOzNQ/viewform?embedded=true" target="_blank">CLICCA QUI</a>
+    </div>
   </p>
-
 
 
 </body>
